@@ -171,6 +171,28 @@
     </div>
 
     <div class="field"
+         tal:condition="view/releases_for_display">
+      <label for="newTargetRelease">Change target release</label>
+
+      <div class="formHelp" id="newTargetRelease_help">Set the target release for this issue</div>
+      
+      <tal:options
+          repeat="option view/releases_for_display">
+        <input class="noborder blurrable" name="targetRelease"
+               value="" id="" type="radio"
+               tal:attributes="value option/value;
+                               id option/value;
+                               checked option/checked;" />
+
+        <label
+            tal:attributes="for option/value"
+            tal:content="option/label">No change</label>
+
+        <br />
+      </tal:options>
+    </div>                
+
+    <div class="field"
          tal:condition="view/managers_for_display">
       <label for="responsibleManager">Change responsible manager</label>
       
@@ -191,8 +213,6 @@
         <br />
       </tal:options>
     </div>                
-
-    <!-- Add control for targetRelease -->
 
     <div class="formControls">
       <input class="standalone" value="Submit" type="submit" />
